<resources>
    <string name="app_name">Depth Of Field Calculator</string>
    <string name="action_settings">Add lens</string>
    <string name="title_activity_detail_lens">Lens Details</string>
    <string name="focal_length_mm">Focal Length [mm]</string>
    <string name="aperature">Aperature</string>
    <string name="make">Make</string>
    <string name="title_activity_depth_of_field_calculate">Calculate DOF</string>
    <string name="distance_to_subject_m">Distance to Subject [m]</string>
    <string name="ex_1_5_for_1_5m">ex: 1.5 for 1.5m</string>
    <string name="circle_of_confusion_m">Circle Of Confusion [m]</string>

    <string name="hyperfocal_distance">Hyperfocal Distance</string>
    <string name="abcd">abcd</string>
    <string name="photo_details_with">Photo details with</string>
    <string name="enter_all_values">Enter all values</string>
    <string name="ex_2_8_for_f2_8">ex: 2.8 for F2.8</string>
    <string name="selected_aperture">Selected aperture</string>
    <string name="_3_error_checking_input">3. Error checking input</string>
    <string name="_4_auto_recalculate">4. Auto-recalculate</string>
    <string name="_2_edit_and_delete_lens">2. Edit and delete lens</string>
    <string name="_1_app_bar_buttons">1. App Bar Buttons</string>
    <string name="optional_features">Optional Features:</string>
    <string name="select_a_lens_to_use">Select a Lens to use:</string>
    <string name="near_focal_distance">Near Focal Distance</string>
    <string name="enter_all_values1">Enter all values</string>
    <string name="far_focal_distance">Far Focal Distance</string>
    <string name="enter_all_values2">Enter all values</string>
    <string name="depth_of_field">Depth Of Field</string>
    <string name="calculate">Calculate</string>
</resources>
