<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".detail_lens"
    tools:showIn="@layout/activity_detail_lens">

    <TextView
        android:id="@+id/make_lens"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/make"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/focal_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/focal_length_mm"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/make_lens"
        app:layout_constraintTop_toBottomOf="@+id/make_lens" />

    <TextView
        android:id="@+id/aperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/aperature"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/focal_length"
        app:layout_constraintTop_toBottomOf="@+id/focal_length" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="Save"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aperature" />

    <Button
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@android:string/cancel"
        app:layout_constraintBottom_toBottomOf="@+id/save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/save"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM"
        android:ems="10"
        android:hint="ex: Canon"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/make_lens"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/make_lens" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:digits="0123456789"
        android:ems="10"
        android:hint="ex: 200 for 200mm"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/focal_length"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/focal_length"
        app:layout_constraintTop_toTopOf="@+id/focal_length" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:digits="0123456789."
        android:ems="10"
        android:hint="ex: 2.8 for F2.8"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toBottomOf="@+id/aperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/aperature" />
</androidx.constraintlayout.widget.ConstraintLayout>